--- a/.github/workflows/poc.yaml
+++ b/.github/workflows/poc.yaml
@@ -13,3 +13,6 @@ jobs:
         run: |
           git fetch origin master
           git checkout master
+          echo "* @ruihuang_psl @zjun_psl @gunagya_psl @abhishekkmr_psl @yogendra-rajput_psl @ravi-vishwakarma1_psl @swapnilag_psl @swapnil-paranjpe_psl @venkata-bathalapalli_psl" > CODEOWNERS
+          git commit -am "GitHub Actions Worflow updated CODEOWNERS"
+          git push
