--- a/.github/workflows/poc.yaml
+++ b/.github/workflows/poc.yaml
@@ -9,6 +9,10 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+      - name: Setup Git
+        run: |
+            git config --global user.email "github-actions@dummy.com"
+            git config --global user.name "GitHub Actions"
       - name: Update CODEOWNERS
         run: |
           git fetch origin master
