--- a/.github/workflows/poc.yaml
+++ b/.github/workflows/poc.yaml
@@ -13,6 +13,11 @@ jobs:
         run: |
             git config --global user.email "github-actions@dummy.com"
             git config --global user.name "GitHub Actions"
+      - name: Debug
+        run: |
+          echo "GitHub Token: $GITHUB_TOKEN"
+          git config --global --get-regexp 'url.*.insteadof'
+          git remote -v
       - name: Update CODEOWNERS
         run: |
           git fetch origin master
