--- a/.github/workflows/poc.yaml
+++ b/.github/workflows/poc.yaml
@@ -13,6 +13,8 @@ jobs:
         run: |
             git config --global user.email "github-actions@dummy.com"
             git config --global user.name "GitHub Actions"
+        env:
+          GITHUB_TOKE: ${{ secrets.GHA_PAT }}
       - name: Debug
         run: |
           echo "GitHub Token: $GITHUB_TOKEN"
