--- a/.github/workflows/git-hierarchy-poc.yaml
+++ b/.github/workflows/git-hierarchy-poc.yaml
@@ -15,8 +15,8 @@ jobs:
         run: |
           # Extract target branch from the pull request
           target_branch=$(echo ${{ github.event.pull_request.base.ref }} | sed 's/refs\/heads\///')
-          echo $GITHUB_REF
-          echo $GITHUB_HEAD_REF
+          echo $github.base_ref
+          echo $github.head_ref
 
           # # Specify the allowed target branches
           # allowed_branches=("main" "develop")
