--- a/.github/workflows/git-hierarchy-poc.yaml
+++ b/.github/workflows/git-hierarchy-poc.yaml
@@ -14,9 +14,9 @@ jobs:
       - name: Check Target Branch
         run: |
           # Extract target branch from the pull request
-          target_branch=$(echo ${{ github.event.pull_request.base.ref }} | sed 's/refs\/heads\///')
-          echo $github.base_ref
-          echo $github.head_ref
+          #target_branch=$(echo ${{ github.event.pull_request.base.ref }} | sed 's/refs\/heads\///')
+          echo ${{ github.base_ref }}
+          echo ${{ github.head_ref }}
 
           # # Specify the allowed target branches
           # allowed_branches=("main" "develop")
