--- a/.github/workflows/poc.yaml
+++ b/.github/workflows/poc.yaml
@@ -17,13 +17,27 @@ jobs:
           GITHUB_TOKE: ${{ secrets.GHA_PAT }}
       - name: Update CODEOWNERS
         run: |
-          git fetch origin master
-          git checkout master
-          echo "* @ruihuang_psl @zjun_psl @gunagya_psl @abhishekkmr_psl @yogendra-rajput_psl @ravi-vishwakarma1_psl @swapnilag_psl @swapnil-paranjpe_psl @venkata-bathalapalli_psl" > CODEOWNERS
-          git commit -am "GitHub Actions Worflow updated CODEOWNERS"
+          connector_main="jira-main"
+          internal_rel="jira-rel-1.0"
+          google_rel="jira-rel-1.0-google"
+          git fetch origin ${{ github.base_ref }}
+          git checkout ${{ github.base_ref }}
+          if [[ ${{ github.base_ref }} == $connector_main ]]; then
+              echo "* @ruihuang_psl @zjun_psl @gunagya_psl @abhishekkmr_psl @yogendra-rajput_psl @ravi-vishwakarma1_psl @swapnilag_psl @swapnil-paranjpe_psl @venkata-bathalapalli_psl" > CODEOWNERS
+              git commit -am "GitHub Actions Worflow updated CODEOWNERS" & true
+          elif [[ ${{ github.base_ref }} == $internal_rel ]]; then
+              echo "* @ruihuang_psl @zjun_psl @gunagya_psl @abhishekkmr_psl @yogendra-rajput_psl @ravi-vishwakarma1_psl @swapnilag_psl @swapnil-paranjpe_psl @venkata-bathalapalli_psl" > CODEOWNERS
+              git commit -am "GitHub Actions Worflow updated CODEOWNERS" & true
+          elif [[ ${{ github.base_ref }} == $google_rel ]]; then
+              echo "* @ruihuang_psl @zjun_psl @gunagya_psl @abhishekkmr_psl @yogendra-rajput_psl @ravi-vishwakarma1_psl @swapnilag_psl @swapnil-paranjpe_psl @venkata-bathalapalli_psl" > CODEOWNERS
+              git commit -am "GitHub Actions Worflow updated CODEOWNERS" & true
+          else
+              echo "No action required, exiting!""
+              exit 0
+          fi
       - name: Push to protected branch
         uses: CasperWA/push-protected@v2
         with:
           token: ${{ secrets.GHA_PAT }}
-          branch: master
+          branch: ${{ github.base_ref }}
           unprotect_reviews: true
