--- a/.github/workflows/poc.yaml
+++ b/.github/workflows/poc.yaml
@@ -32,7 +32,7 @@ jobs:
               echo "* @ruihuang_psl @zjun_psl @gunagya_psl @abhishekkmr_psl @yogendra-rajput_psl @ravi-vishwakarma1_psl @swapnilag_psl @swapnil-paranjpe_psl @venkata-bathalapalli_psl" > CODEOWNERS
               git commit -am "GitHub Actions Worflow updated CODEOWNERS" & true
           else
-              echo "No action required, exiting!""
+              echo "No action required, exiting!"
               exit 0
           fi
       - name: Push to protected branch
