--- a/.github/workflows/poc.yaml
+++ b/.github/workflows/poc.yaml
@@ -32,14 +32,15 @@ jobs:
           elif [[ ${{ github.base_ref }} == $google_rel ]]; then
               echo "* @ruihuang_psl @zjun_psl @gunagya_psl @abhishekkmr_psl @yogendra-rajput_psl @ravi-vishwakarma1_psl @swapnilag_psl @swapnil-paranjpe_psl @venkata-bathalapalli_psl" > CODEOWNERS
               git commit -am "GitHub Actions Worflow updated CODEOWNERS" & true
+              git push -f
           else
               echo "No action required, exiting!"
               exit 1
           fi
-      - name: Push to protected branch
-        uses: CasperWA/push-protected@v2
-        if: steps.update_codeowners.conclusion == 'success'
-        with:
-          token: ${{ secrets.GHA_PAT }}
-          branch: ${{ github.base_ref }}
-          unprotect_reviews: true
+      # - name: Push to protected branch
+      #   uses: CasperWA/push-protected@v2
+      #   if: steps.update_codeowners.conclusion == 'success'
+      #   with:
+      #     token: ${{ secrets.GHA_PAT }}
+      #     branch: ${{ github.base_ref }}
+      #     unprotect_reviews: true
